namespaces/live.cloud-platform.service.justice.gov.uk/tariq-test/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "tariq-test"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "test"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "Platforms"
    cloud-platform.justice.gov.uk/slack-channel: "cloud-platform"
    cloud-platform.justice.gov.uk/application: "test application for tariq"
    cloud-platform.justice.gov.uk/owner: "WebOps Team: platforms@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/cloud-platform-helloworld-ruby-app"
    cloud-platform.justice.gov.uk/team-name: "webops"
    cloud-platform.justice.gov.uk/review-after: ""
